# clash-autoswitch

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: publish.yml
clash_autoswitch/: __init__.py  __main__.py  api.py  daemon.py  service.py
clashpilot/: __init__.py  __main__.py  api.py  bench.py  config.py  core.py  cursorhook.py  daemon.py  default_config.yaml  env_config.py  health.py  logutil.py  opus.py  opus_regions.py  pathsetup.py  proxy_ctrl.py  selector.py  service.py  subscription_merge.py  switch_policy.py  sysproxy.py  win_elevate.py
tests/: test_controller_mock.py  test_daemon_logic.py  test_health_policy.py  test_opus_scan.py  test_subscription_merge.py
tools/: dns_bench.py  dump_available_models.py  dump_cursor_models.py  fetch_cursor_models_api.py  fix_cursor_models.py  list_api_model_names.py  list_patched_models.py  patch_cursor_models.py  probe_catalog_conditions.py  query_cursor_models.py  query_cursor_models2.py  repair_cursor_models.py  restore_cursor_models.py  scan_cursor_state.py  verify_gpt55.py
