[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clashpilot"
version = "0.2.0"
description = "Standalone Clash/Mihomo client that auto-picks the fastest node and fails over when it dies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "JamesChoeng", email = "jameschoeng@gmail.com" }]
keywords = ["clash", "mihomo", "clash-verge", "proxy", "failover", "latency", "subscription", "standalone"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: Proxy Servers",
]
# Zero third-party dependencies: standard library only.
dependencies = []

[project.urls]
Homepage = "https://github.com/JamesChoeng/clashpilot"
Issues = "https://github.com/JamesChoeng/clashpilot/issues"

[project.scripts]
clashpilot = "clashpilot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["clashpilot"]
# Ship the offline-fallback node list bundled inside the package.
force-include = { "clashpilot/default_config.yaml" = "clashpilot/default_config.yaml" }
